force-app/main/default/objects/Previous_Application__c/Previous_Application__c.object-meta.xml
<CustomObject>
    <label>Previous Application</label>
    <nameField>
        <label>Previous Application Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previous Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>