force-app/main/default/objects/Previous_Application__c/fields/Not_Successful_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Not_Successful_Reasons__c</fullName>
    <label>Not Successful Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>