force-app/main/default/objects/Previous_Application__c/fields/Was_It_Successful__c.field-meta.xml
<CustomField>
    <fullName>Was_It_Successful__c</fullName>
    <label>Was It Successful</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>